--- a/src/App.css
+++ b/src/App.css
@@ -58,13 +58,15 @@ body {
 
 .sidebar {
   background-color: darkgrey;
-  height: 100%;
+  height:100vh;
 }
 
 .content {
   width: 100%;
   grid-column-start: 2;
   grid-column-end: 4;
+  height:100vh;
+  overflow-y: scroll;
 }
 
 .layout-grid {
